# medishop-ai-agent

./: .env.example  .gitignore  README.md  TODO.md  package.json  pnpm-lock.yaml  render.yaml  vercel.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: agent.py  appointments.py  health.py  products.py  router.py  support.py
apps/api/app/contracts/: __init__.py  agent.py  appointments.py  auth.py  common.py  health.py  products.py  support.py
apps/api/app/core/: config.py  errors.py  logging.py
apps/api/app/models/: __init__.py  base.py  entities.py
apps/api/app/repositories/: appointment_repository.py  conversation_repository.py  knowledge_repository.py  product_repository.py  support_repository.py
apps/api/app/schemas/: __init__.py  entities.py
apps/api/app/services/: agent_service.py  appointment_service.py  product_service.py  support_service.py
apps/api/tests/: test_backend_batch1.py  test_config.py  test_contract_metadata_aliases.py  test_frontend_backend_smoke.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: app-shell.tsx  placeholder-page.tsx
apps/web/src/lib/: api.test.ts  api.ts  env.ts
docs/: api-spec.md  architecture.md  database-schema.md  demo-script.md  deployment.md  development.md  supabase-setup.md
supabase/: seed.sql
supabase/migrations/: 001_initial_schema.sql  002_create_vector_index_after_backfill.sql
supabase/scripts/: create_vector_index_after_backfill.sql
(+11 files in other folders)
